Examples/KubenetesTest/deploy/k8s/k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetcorekubernetestest
  labels:
    run: aspnetcorekubernetestest
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 31080
  selector:
    app: aspnetcorekubernetestest
