Examples/KubenetesTest/deploy/k8s/k8s-statefullsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aspnetcorekubernetestest
  labels:
    app: aspnetcorekubernetestest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnetcorekubernetestest
  template:
    metadata:
      labels:
        app: aspnetcorekubernetestest
    spec:
      volumes:
        - name: aspnetcoreapp
          persistentVolumeClaim:
            # Tên volume claim ở đây
            claimName: dncb-pv-claim-aspnetcore
        - name: aspnetcore-configmap
          configMap:
            name: aspnetcore-configmap
        - name: aspnetcore-secret
          secret:
            secretName: aspnetcore-secret
      containers:
      - name: app
        image: tuannguyenssu/aspnetcorekubernetestest:latest
        resources:
          limits:
            memory: "100M"
            cpu: "100m"
        ports:
          - containerPort: 80
        volumeMounts:
          - name: aspnetcoreapp
            mountPath: /app/wwwroot

          # - name: aspnetcore-configmap
          #   mountPath: /app/appsettings.Kubernetes.json
          #   subPath: appsettings.Kubernetes.json
          - name: aspnetcore-secret
            mountPath: /app/appsettings.Kubernetes.json
            subPath: appsettings.Kubernetes.json
            readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: aspnetcorekubernetestest
  labels:
    run: aspnetcorekubernetestest
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 31080
  selector:
    app: aspnetcorekubernetestest
---
