Examples/KubenetesTest/deploy/k8s/k8s-ingresses.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: http-test-svc
#   # dịch vụ này tạo tại namespace có Haproxy Ingress
#   namespace: ingress-controller
# spec:
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#   selector:
#     run: http-test-app
#   sessionAffinity: None
#   type: ClusterIP
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     run: http-test-svc
#   name: http-test-svc
#   # Deploy này tạo tại namespace có Haproxy Ingress
#   namespace: ingress-controller
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       run: http-test-app
#   template:
#     metadata:
#       labels:
#         run: http-test-app
#     spec:
#       containers:
#       - image: nginx
#         imagePullPolicy: IfNotPresent
#         name: http
#         ports:
#         - containerPort: 80
#           protocol: TCP
#         resources: {}

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: app
#   namespace: ingress-controller
# spec:
#   rules:
#     # Tên miền truy cập
#   - host: ingress.local
#     http:
#       paths:
#       - path: /
#         backend:
#           # dịch vụ phục vụ tương ứng với tên miền và path
#           serviceName: http-test-svc
#           servicePort: 80


kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
